--- a/helm/jenkins-values.yaml
+++ b/helm/jenkins-values.yaml
@@ -2,6 +2,7 @@ controller:
   admin:
     username: admin
     password: admin
+  serviceType: NodePort
 
   replicaCount: 1  # << 여기 추가: 젠킨스 파드를 1개만 띄우기
 
