--- a/script/argocd-values.yaml
+++ b/script/argocd-values.yaml
@@ -1,5 +1,3 @@
-# argocd-values.yaml
-
 global:
   logging:
     format: json
@@ -9,10 +7,9 @@ controller:
   replicas: 1
   affinity:
     nodeAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 100
-          preference:
-            matchExpressions:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
               - key: node-role.kubernetes.io/infra
                 operator: Exists
 
@@ -20,10 +17,9 @@ repoServer:
   replicas: 1
   affinity:
     nodeAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 100
-          preference:
-            matchExpressions:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
               - key: node-role.kubernetes.io/infra
                 operator: Exists
 
@@ -36,10 +32,9 @@ server:
       https: 32244
   affinity:
     nodeAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - weight: 100
-          preference:
-            matchExpressions:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
               - key: node-role.kubernetes.io/infra
                 operator: Exists
 
